# CodesysNetVar

./: .gitignore  README.MD  README.ru.MD  pyproject.toml
CodesysNetVar/: data_packer.py  db_connector.py  exeptions.py  main.py  test_client.py
CodesysNetVar/codesys/: data_types.py  nvl_parser.py  utils.py
CodesysNetVar/network/: parser.py  server.py
CodesysNetVar/settings/: settings.py
CodesysNetVar/utils/: exeptions.py  loger_setup.py  statistics.py
tests/: test_codesys_dt.py  test_codesys_types.py  test_nvl_parser.py  test_with_hypothesis.py
tests/set_of_nvl_files_for_test/: nvl_notok_1.gvl  nvl_notok_2.gvl  nvl_notok_3.gvl  nvl_notok_4.gvl  nvl_ok_1.gvl  nvl_ok_2.gvl  nvl_ok_3.gvl  nvl_ok_4.gvl  nvl_ok_5.gvl  nvl_ok_6.gvl  nvl_ok_7.gvl
