[tool.poetry]
name = "codesysnetvar"
version = "0.1.0"
description = ""
authors = ["Nikita Golovotyapov <golovotyapov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
loguru = "^0.6.0"
SQLAlchemy = "^1.4.42"
psycopg2 = "^2.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
