[tool.poetry]
name = "codesysnetvar"
version = "0.1.0"
description = ""
authors = ["Nikita Golovotyapov <golovotyapov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
loguru = "^0.6.0"
SQLAlchemy = "^1.4.42"
psycopg2 = "^2.9.4"
mypy = "^0.982"
black = "^22.10.0"
pytest = "^7.2.0"
hypothesis = "^6.56.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'
exclude = ''